=================
Changes for Crate
=================

Unreleased
==========

NOTE: Upgrading from 0.49 or earlier versions requires a full cluster restart

 - Updated crash to 0.13.0 which includes following changes:

    - added `dynamic` as output format option

    - display command help in case the command is not used correctly

    - display NULL values in mixed mode correctly

 - Fix: return correct status for ``GET`` requests on ``/`` REST endpoint
   when cluster is starting up

 - Updated crate-admin to 0.13.2 which includes following changes:

    - improved layout for smaller screens

    - improved load graph on overview page

    - display load, cpu usage, disk i/o, process stats and shard information
      on node detail page

    - added columns with partition values on "Partitions" table
      on table detail view

 - Fixed a race condition that could cause a `CREATE TABLE` statement
   immediately after a `DROP TABLE` statement to fail.

 - Fixed a minor memory leak that occurred if custom schemas were deleted.

 - Fixed incorrect comparison in query by IP type

 - Added ``probe_timestamp`` child expressions for os, process, heap, mem, and
   network columns to sys.nodes table

 - Added ``process['cpu']`` column to sys.nodes table

 - Fix: make sure sys.nodes expressions that utilize os/process/network/jvm
   services use the same stats probe per row; previously values derived from
   these services could have been from different probes

 - Fix: Stats table log entry was missing for delete-by-query statements.

 - Fix: made it possible to filter on all types of table settings

 - Added ``ALTER TABLE ONLY`` statement support.

 - Added unicast host discovery via SRV DNS records

 - Added the ``KILL ALL`` statement which can be used to cancel running
   operations

 - Added new table settings that can be set on ``CREATE TABLE``
   and changed/reset with ``ALTER TABLE``.

 - Added the ``concat`` scalar function and the concat operator ``||``.
