@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+- Fix: Allows queries on system columns _raw and _doc
+
 NOTE: Upgrading from 0.49 or earlier versions requires a full cluster restart
 
  - Updated crash to 0.13.0 which includes following changes:
